name:                clusterview
version:             0.1.0.0
synopsis:            Cluster vision
description:         Blah
homepage:            https://github.com/vpsfreecz/clusterview
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2018 Richard Marko
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Remote.Monitoring.Cluster
                     , System.Remote.Monitoring.Cluster.Types
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , data-prometheus
                     , async
                     , stm
                     , config-ini
                     , text
                     , time
                     , mtl
                     , http-client
                     , regex-posix
                     , safe-exceptions
  default-language:    Haskell2010

executable clusterview
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansigraph
                     , bytestring
                     , brick
                     , containers
                     , data-default
                     , data-prometheus
                     , microlens
                     , microlens-th
                     , template-haskell
                     , time
                     , pretty-relative-time
                     , regex-posix
                     , async
                     , stm
                     , vty
                     , vector
                     , mtl
                     , clusterview
  default-language:    Haskell2010
  default-extensions: OverloadedStrings TemplateHaskell TypeFamilies RecordWildCards DeriveGeneric


test-suite clusterview-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SpecHelper
  build-depends:       base >= 4.7 && < 5
                     , clusterview
                     , hspec
                     , base16-bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vpsfreecz/clusterview
